--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body{
     font-family: "Roboto", sans-serif; 
     font-weight: 300;
+    margin: 0px;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color:rgb(73, 61, 86)
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -17,4 +24,42 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("Images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.Link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightsalmon, tomato);
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+}
+.mid-width{
+    float: left;
+    padding-left: 2%;
+    margin-left: 5%;
+    width: 40%;
+}
+.mid-width img{
+    width: 100%;
+}
+.link{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+}
+.mid-banner{
+    background-image: url(Images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
